fix: get transactions endpoint based on query params
